[package]
name = "rust-solana-token-monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "2.0.0"
solana-client = "2.0.0"  # Solana client library
solana-transaction-status = "2.0.0"
tokio = { version = "1", features = ["full"] }  # Tokio for async runtimes
serde_json = "1.0"
log = "0.4.22"
env_logger = "0.11.5"
futures = "0.3.31"
url = "2.5.2"
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
tokio-retry = "0.3"
anyhow = "1.0.89"